--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/redux-logger": "^3.0.9",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
+    "daisyui": "^3.7.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
